--- a/Services/Orders/package.json
+++ b/Services/Orders/package.json
@@ -1,10 +1,10 @@
 {
-  "main": "dist/app.js",
+  "main": "app.js",
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.2"
   }
