--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "vue-axios": "^3.2.4",
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
+    "vue-typer": "^1.2.0",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
