--- a/Services/UserAuth/package.json
+++ b/Services/UserAuth/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "node-schedule": "^2.0.0"
   }
 }
