--- a/Services/Products/package.json
+++ b/Services/Products/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "node-schedule": "^2.0.0"
   }
 }
